# koinos-one

./: .dockerignore  .gitignore  .gitmodules  AGENDS.md  AGENTS.local.example.md  AGENTS.md  APP_REFACTOR_STRUCTURE.md  BUNDLING_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_PERFORMANCE_IMPLEMENTATION_PLAN.md  Dockerfile  ELECTRON_MAIN_REFACTOR_PHASE1.md  ELECTRON_MAIN_REFACTOR_REMAINING_STEPS.md  KNODEL_WALLET_KONDOR_ADAPTATION_PLAN.md  KNODEL_WALLET_KONDOR_ADAPTATION_STATUS.md  LICENSE  MIGRATION_PLAN.md  NATIVE_BASEDIR_CONFIG_OVERRIDE_BUG.md  PRODUCER_WALLET_ACCOUNT_INTEGRATION_PLAN.md  README.md  SECURITY.md  WALLET_TAB_IMPLEMENTATION_PLAN.md  electron-builder.yml  index-D1C9JOHT.js  index.html  knodel.code-workspace  koinosgui.code-workspace  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  playwright.electron.config.ts  rebranding.md  tsconfig.electron.json  vercel.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+2 more)
Knodel/: Package.resolved  Package.swift
cmake/: arm64-toolchain.cmake
config/: mainnet-observer.yml  mainnet-public-backup-observer.yml  mainnet-public-bootstrap-observer.yml  prodnet-docker-producer.yml  testnet-public-bootstrap-observer.container.yml  testnet-public-bootstrap-observer.yml
docker/: teleno-prod-producer
docs/: AMQP_BROKER_SERVICE.md  BLOCK_STORE_SERVICE.md  CHAIN_STATE_ARCHITECTURE.md  CONTRACT_META_STORE_SERVICE.md  JSONRPC_SERVICE.md  MICROSERVICES_ARCHITECTURE.md  P2P_SERVICE.md  README.md  WASM_PERFORMANCE_OPTIMIZATION.md
electron/: introspect.js  introspect2.js  main.ts  preload.ts  smoke.js
node/teleno-node/: CMakeLists.hunter.txt  CMakeLists.standalone.txt  CMakeLists.txt
node/teleno-node/cmake/: cpp-libp2p-koinos-prelude.cmake
node/teleno-node/cmake/shims/boost_beast-1.83.0/: boost_beast-config-version.cmake
node/teleno-node/src/: CMakeLists.txt  main.cpp
node/teleno-node/src/account_history/: account_history.cpp
node/teleno-node/src/backup/: backup_admin_server.cpp  backup_admin_server.hpp  backup_plan.cpp  backup_plan.hpp  backup_scheduler.cpp  backup_scheduler.hpp  backup_service.cpp  backup_service.hpp  checkpoint_manager.cpp  checkpoint_manager.hpp  public_restore.cpp  public_restore.hpp  restore_activation_supervisor.cpp  restore_activation_supervisor.hpp  sftp_uploader.cpp  sftp_uploader.hpp  snapshot_repository.cpp  snapshot_repository.hpp
node/teleno-node/src/block_production/: block_producer.cpp  block_producer.hpp
node/teleno-node/src/block_store/: block_store.cpp  skip_list.hpp
node/teleno-node/src/contract_meta_store/: contract_meta_store.hpp
node/teleno-node/src/core/: config.cpp  config.hpp  node_version.hpp
node/teleno-node/src/grpc_server/: grpc_server.hpp
node/teleno-node/src/interfaces/: i_block_store.hpp  i_chain.hpp
node/teleno-node/src/jsonrpc/: jsonrpc_server.cpp
node/teleno-node/src/koinos/chain/: controller.cpp  controller.hpp  indexer.cpp
node/teleno-node/src/koinos/mempool/: block_applicator.cpp  block_applicator.hpp  state.cpp
node/teleno-node/src/koinos/state_db/: LICENSE.md  state_db.cpp  state_db.hpp  state_delta.cpp  state_delta.hpp
node/teleno-node/src/koinos/state_db/backends/: backend.hpp
node/teleno-node/src/koinos/state_db/backends/map/: map_backend.cpp  map_backend.hpp
node/teleno-node/src/koinos/state_db/backends/rocksdb/: rocksdb_backend.cpp  rocksdb_backend.hpp
node/teleno-node/src/mempool/: mempool_adapter.hpp
node/teleno-node/src/p2p/: go_bridge_transport.hpp  go_math_rand_cooked.inc  gorpc_codec.cpp  gorpc_codec.hpp  gossip_toggle.hpp  identity.cpp  identity.hpp  libp2p_transport.cpp  libp2p_transport.hpp  p2p_node.cpp  p2p_node.hpp  transport.hpp  types.hpp
node/teleno-node/src/storage/: chain_migration.cpp  chain_migration.hpp  rocksdb_manager.cpp  rocksdb_manager.hpp
node/teleno-node/src/transaction_store/: transaction_store.hpp
node/teleno-node/tests/backup/: backup_admin_server_test.cpp  backup_checkpoint_test.cpp  backup_plan_test.cpp  backup_public_restore_test.cpp  backup_service_test.cpp  backup_sftp_test.cpp  backup_snapshot_test.cpp
node/teleno-node/tests/block_production/: block_producer_test.cpp
node/teleno-node/tests/chain/: controller_delta_test.cpp
node/teleno-node/tests/core/: config_test.cpp  service_registry_test.cpp
node/teleno-node/tests/grpc/: grpc_server_test.cpp
node/teleno-node/tests/p2p/: gorpc_codec_test.cpp  identity_test.cpp  libp2p_one_peer_sync_live_test.cpp  libp2p_peer_rpc_live_test.cpp
node/teleno-node/tests/storage/: rocksdb_manager_test.cpp  state_db_durability_test.cpp
node/teleno-node/tools/: grpc_parity_probe.cpp  import_block_store_stream.cpp  migrate_block_store.sh  private_testnet_keygen.cpp  state_delta_audit.cpp  state_delta_replay_audit.cpp
scripts/: README.md  ab-mainnet-peer-acquisition.sh  audit-state-deltas.py  benchmark-legacy-native-jsonrpc.sh  benchmark-monolith-index-replay.py  benchmark-monolith-mixed-stress.py  benchmark-monolith-startup.sh  benchmark-monolith-sync.py  benchmark-monolith-thread-matrix.py  benchmark-monolith.py  benchmark-transaction-submission.js  build-cpp-libp2p-koinos.sh  build-gmp-static.sh  build-libssh-static.sh  build-mac-icon.js  build-native-mac.sh  build-native-win.bat  build-private-pob-genesis.js  build-private-testnet-contracts.sh  build-rocksdb-zstd.sh  build-zstd-static.sh  check-notarize-credentials.js  check-rocksdb-compression.sh  compare-grpc-parity.sh  compare-journal-keys.py  compare-jsonrpc-parity.py  compare-receipts.py  dev-electron.js  external-pob-testnet-signoff.sh  fetch-koinos-integration-tests.sh  generate-build-info.js  generate-teleno-node-build-info.js  inspect-journal-heights.py  koinos-compose-all.sh  koinos-local.js  live-producer-transaction-regression.py  live-producer-transaction-regression.sh  mainnet-peer-candidates.txt  mainnet-peer-validated.txt  notarize-macos-dmg.js  (+27 more)
src/: App.tsx  i18n.ts  knodel-electron.d.ts  styles.css  teleno-electron.d.ts
tests/: promote-public-bootstrap-backup.test.js
(+376 files in other folders)
